connect crawler / add launcher